<resources>
    <string name="app_name">Wifi Mouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_mouse">Wifi Mouse</string>
    <string name="developer">Developed By Khairul Bashar Lemon</string>
    <string name="mode_slideshow">Slideshow Mode</string>
    <string name="connect_to_pc">Connect</string>
    <string name="manual_connection">Manually Connect</string>
    <string name="select_mouse_speed">Increase Mouse Speed</string>
    <string name="communicate">About</string>
    <string name="about_developer">About Developer</string>
    <string name="settings">Connectivity and Settings</string>
    <string name="configuration">Configuration</string>
    <string name="mouse_mode">Mouse Mode</string>
    <string name="advanced_mode">Advanced Mode</string>
    <string name="hide_title">Hide Title</string>
    <string name="disconnect">Disconnect</string>
    <string name="wireless_mouse">Wireless Mouse</string>
    <string name="developed_by_khairul_bashar_limon">Developed by Khairul Bashar Lemon</string>
    <string name="add_action">Add Action</string>
    <string name="mode">Mode</string>
    <string name="exit_app">Exit App</string>
    <string name="game_mode">Game Mode</string>
    <string name="add_custom_key">Add Custom Key</string>
    <string name="functionality">Functionality</string>
    <string name="mouse_button">Mouse Button</string>
    <string name="control_button">Control Button</string>
    <string name="direction_button">direction button</string>
    <string name="text_post_mode">Text Post Mode</string>
    <string name="forcefully_connect">Forcefully Connect</string>
    <string name="info">Designed and Developed By\nKhairul Bashar Lemon\nDept. of Statistics\nBSMRSTU\nFounder and CEO at Garland Inc.\nkhairulbasharlemon@gmail.com</string>
    <string name="show_title">Show Title</string>
    <string name="status">Status</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="quick_options">Quick Options</string>
    <string name="copy_selection">Copy Selection</string>
    <string name="cut_selection">Cut Selection</string>
    <string name="paste_here">Paste Here</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="close_current_window">Close Current Window</string>
    <string name="show_panel_manager">Show Panel Manager</string>
    <string name="post">Post</string>
    <string name="enter_a_text_and_click_post">Enter a Text and click Post</string>
    <string name="permanent_delete">Permanently Delete Selection</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="select_time">01:30</string>
    <string name="esc">Close The Slide</string>
    <string name="next">Next Slide</string>
    <string name="prev">Previous Slide</string>
    <string name="apply">Apply</string>
    <string name="select_time_text">Select Time</string>
    <string name="select_time_right_now">Select Time Right Now</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="connection_list">Connection List</string>
    <string name="connect">Connect</string>
    <string name="enter_connected_ip_address">Enter Connected Ip Address</string>
    <string name="ip_msg">Sorry Your input is Not an IP Address..</string>
    <string name="valid_ip_msg">Enter a valid IP Address</string>
    <string name="msg_apply">Press Apply to Connect Your Mouse With This IP</string>
    <string name="ctrl">ctrl</string>
    <string name="alt">alt</string>
    <string name="shift">Shift</string>
    <string name="del">Del</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f3">F3</string>
    <string name="f4">F4</string>
    <string name="f5">F5</string>
    <string name="f6">F6</string>
    <string name="f7">F7</string>
    <string name="f8">F8</string>
    <string name="f9">F9</string>
    <string name="f10">F10</string>
    <string name="f11">F11</string>
    <string name="f12">F12</string>
    <string name="play">Play Slide</string>
    <string name="nxt">Next</string>
    <string name="prv">Prev</string>
    <string name="refresh">Refresh</string>
    <string name="rotate_90_degree">Rotate Right Side Base</string>
    <string name="rotate_180_degree">Rotate Up Side Base</string>
    <string name="rotate_270_degree">Rotate Left Side Base</string>
    <string name="rotate_360_degree">Rotate To Standard</string>
    <string name="make_volume_button_control_slide">Make volume button control slide</string>
    <string name="make_volume_button_for_scroll_bar_control">Make volume button for scroll bar control</string>
    <string name="help">Help</string>
</resources>
