<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/id_layout_func_button"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f1"
            android:id="@+id/id_function_btn_1"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f2"
            android:id="@+id/id_function_btn_2"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f3"
            android:id="@+id/id_function_btn_3"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f4"
            android:id="@+id/id_function_btn_4"
            />

        <include layout="@layout/text_one_weight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f5"
            android:id="@+id/id_function_btn_5"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f6"
            android:id="@+id/id_function_btn_6"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f7"
            android:id="@+id/id_function_btn_7"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f8"
            android:id="@+id/id_function_btn_8"
            />

        <include layout="@layout/text_one_weight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f9"
            android:id="@+id/id_function_btn_9"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f10"
            android:id="@+id/id_function_btn_10"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f11"
            android:id="@+id/id_function_btn_11"
            />
        <include layout="@layout/text_one_weight"/>
        <Button
            style="@style/function_button"
            android:text="@string/f12"
            android:id="@+id/id_function_btn_12"
            />
        <include layout="@layout/text_one_weight"/>
    </LinearLayout>
</LinearLayout>