<LinearLayout android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/layout_control_button"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/text_one_weight"/>
    <Button
        style="@style/function_button"

        android:textSize="@dimen/basic_circle_button_text_small"
        android:text="@string/ctrl"
        android:id="@+id/id_btn_ctrl"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:id="@+id/id_btn_ctrl_radio"
        />
    <Button
        style="@style/function_button"
        android:textSize="@dimen/basic_circle_button_text_small"
        android:text="@string/alt"
        android:id="@+id/id_btn_alt"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:id="@+id/id_btn_alt_radio"
        />
    <Button
        android:id="@+id/id_btn_shift"
        style="@style/function_button"
        android:textSize="@dimen/basic_circle_button_text_small"
        android:text="@string/shift"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:id="@+id/id_btn_shift_radio"
        />
    <Button
        style="@style/function_button"
        android:textSize="@dimen/basic_circle_button_text_small"
        android:text="@string/del"
        android:id="@+id/id_btn_del"
        />
    <include layout="@layout/text_one_weight"/>
</LinearLayout>