<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="15sp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/valid_ip_msg"
        android:id="@+id/id_ip_control_text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:id="@+id/input_ip"
        android:hint="@string/enter_connected_ip_address"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        style="@style/default_button_style"
        android:text="@string/apply"
        android:id="@+id/ip_apply_button"
        />

</LinearLayout>